# doubau

./: .dockerignore  .gitignore  README.md  docker-compose.yml  doubow_build_plan.docx  doubow_build_plan_polished.docx  doubow_prd.docx  doubow_prototype.html  requirements.txt
api/: .env.example  Dockerfile  conftest.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_init_users_profiles.py  (+26 more)
api/app/: celery_app.py  db.py  main.py  security.py  startup_bootstrap.py  state_machine.py  tasks.py
api/scripts/: check_launch_env.py  start.sh  trigger_catalog_clear.sh  trigger_catalog_ingest.sh
api/tests/: test_account_deletion_api.py  test_adzuna_ingest.py  test_application_tracker_crm_api.py  test_auth_welcome_email.py  test_celery_dlq.py  test_check_ins_api.py  test_content_fingerprint.py  test_cron_clear_catalog.py  test_cron_queue_ingest.py  test_discovery_feed_match_scope.py  test_followup_reminder_task.py  test_glassdoor_realtime.py  test_hero_dashboard_api.py  test_idempotency_helpers.py  test_idempotency_middleware.py  test_job_aggregators_ingest.py  test_job_catalog_query_resume.py  test_job_feedback_api.py  test_job_get_api.py  test_job_opening_analyzer.py  test_job_rapidapi_enrichment_api.py  test_jobs_integrity_dedup.py  test_jobs_scoring.py  test_match_metrics_api.py  test_matching_rerank.py  test_me_google_send_test_email.py  test_me_profile_goals_api.py  test_me_resume_latest_api.py  test_milestones_api.py  test_pathfinder_api.py  test_phase3_outreach.py  test_rapidapi_integrations_wiring.py  test_remoteok_ingest.py  test_resume_embeddings.py  test_resume_llm_structuring.py  test_resume_parsing.py  test_resume_structure.py  test_resume_upload_ack_email.py  test_rss_links.py  test_score_job_task.py  (+6 more)
(+377 files in other folders)
