[project]
name = "doubau-api"
version = "0.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==4.3.0",
    "boto3==1.40.14",
    "celery==5.5.3",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "click==8.3.3",
    "cryptography==48.0.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "fastapi==0.136.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.13",
    "iniconfig==2.3.0",
    "langchain==0.3.30",
    "langchain-core==0.3.86",
    "langchain-openai==0.3.35",
    "mako==1.3.12",
    "markupsafe==3.0.3",
    "openai>=1.104.2,<3",
    "packaging>=23.2,<26",
    "passlib==1.7.4",
    "pgvector==0.3.6",
    "pluggy==1.6.0",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "pypdf==6.0.0",
    "pytest==9.0.3",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.27",
    "pyyaml==6.0.3",
    "redis==5.0.8",
    "rsa==4.9.1",
    "ruff==0.15.12",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.46.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

